# open-strength

./: Cargo.toml  README.md  flake.nix
domain/: Cargo.toml
domain/src/: common.rs  lib.rs  routine.rs  routine_repository.rs  workout.rs
domain/src/outbound/: memory_routine_repository.rs
domain/src/routine/: memory_routine_repository.rs  mod.rs  model.rs  ports.rs  service.rs
domain/src/routine/models/: exercise.rs  mod.rs  root.rs  set.rs
domain/src/routine/service/: composition.rs  detailing.rs  management.rs  mod.rs
domain/src/shared/: intensity.rs  mod.rs  weight.rs
domain/src/workout/: memory_workout_repository.rs  mod.rs  ports.rs  service.rs  workout.rs
domain/tests/: common_tests.rs  routine_tests.rs  storage_tests.rs  workout_tests.rs
domain/tests/common/: mod.rs
storage/: Cargo.toml
storage/src/: lib.rs  memory_routine_repository.rs
storage/tests/: storage_tests.rs
web/: Cargo.toml  Dioxus.toml  index.html
web/public/: manifest.json
web/src/: main.rs
web/src/views/: home.rs  mod.rs  navbar.rs  routine.rs
web/src/views/routine/: mod.rs  view_routine.rs
