[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = "0.4.43"
thiserror = "2.0.18"
uuid = { version = "1.20.0" , features = [ "v7", "serde", "js" ]}

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
